5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1863_1290.log
== TEST (2019-07-02 10:02:54) 
-- CODE:
from numpy import*
from numpy.linalg import*

d= array(eval(input("digite seu vetor")))
a= array[[10,12,15,
			6,8,12,
			12,12,18]]

d= dot(inv(a),d.T)

print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:03:24) 
-- CODE:
from numpy import*
from numpy.linalg import*

d= array(eval(input("digite seu vetor")))
a= array([10,12,15,
			6,8,12,
			12,12,18])

d= dot(inv(a),d.T)

print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:05:10) 
-- CODE:
from numpy import*
from numpy.linalg import*

d= array(eval(input("digite seu vetor")))
a= array([10,12,15],
			[6,8,12],
			[12,12,18])
d= dot(inv(a),d.T)

print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:09:06) 
-- CODE:
from numpy import*
from numpy.linalg import*

d= array(eval(input("digite seu vetor")))
a= array([10,12,15],
			[6,8,12],
			[12,12,18])
d= dot(inv(a),d.T)

print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:09:54) 
-- CODE:
from numpy import*
from numpy.linalg import*

d= array(eval(input("digite seu vetor")))
a= array([10,12,15],
			[6,8,12],
			[12,12,18])
d= dot(inv(a),d.T)

print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:12:20) 
-- CODE:
from numpy import*
from numpy.linalg import*

d= array(eval(input("digite seu vetor")))
a= array([10,12,15],
			[6,8,12],
			[12,12,18])
d= dot(inv(a),d.T)

print("cadeira:",round(v[0],0))
print("bau:",round(v[1],0))
print("mesa:",round(v[2],0))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:14:42) 
-- CODE:
from numpy import*
from numpy.linalg import*

d= array(eval(input("digite seu vetor")))
a= array([10,12,15],
			[6,8,12],
			[12,12,18])
d= dot(inv(a),d.T)

print("cadeira:",round(v[0],0))
print("bau:",round(v[1],0))
print("mesa:",round(v[2],0))
for i in range(v):
	if max(v[i]==v[0]):
		print("cadeira")
	elif (max(v[i]==v[1])):
		print("bau")
	else:
		print("mesa")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:15:40) 
-- CODE:
from numpy import*
from numpy.linalg import*

d= array(eval(input("digite seu vetor")))
a= array([10,12,15],
			[6,8,12],
			[12,12,18])
d= dot(inv(d),a.T)

print("cadeira:",round(v[0],0))
print("bau:",round(v[1],0))
print("mesa:",round(v[2],0))
for i in range(v):
	if max(v[i]==v[0]):
		print("cadeira")
	elif (max(v[i]==v[1])):
		print("bau")
	else:
		print("mesa")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:16:40) 
-- CODE:
from numpy import*
from numpy.linalg import*

d= array(eval(input("digite seu vetor")))
a= array([10,12,15],
			[6,8,12],
			[12,12,18])
d= dot(inv(a),d.T)

print("cadeira:",round(v[0],0))
print("bau:",round(v[1],0))
print("mesa:",round(v[2],0))
for i in range(v):
	if max(v[i]==v[0]):
		print("cadeira")
	elif (max(v[i]==v[1])):
		print("bau")
	else:
		print("mesa")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:17:23) 
-- CODE:
from numpy import*
from numpy.linalg import*

d= array(eval(input("digite seu vetor")))
a= array([10,12,15],
			[6,8,12],
			[12,12,18])
d= dot(inv(a),d.T)

print("cadeira:",round(v[0],0))
print("bau:",round(v[1],0))
print("mesa:",round(v[2],0))
for i in range(v):
	if max(v[i]==v[0]):
		print("cadeira")
	elif (max(v[i]==v[1])):
		print("bau")
	else:
		print("mesa")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:18:04) 
-- CODE:
from numpy import*
from numpy.linalg import*

d= array(eval(input("digite seu vetor")))
a= array([[10,12,15],
			[6,8,12],
			[12,12,18]])
d= dot(inv(a),d.T)

print("cadeira:",round(v[0],0))
print("bau:",round(v[1],0))
print("mesa:",round(v[2],0))
for i in range(v):
	if max(v[i]==v[0]):
		print("cadeira")
	elif (max(v[i]==v[1])):
		print("bau")
	else:
		print("mesa")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:18:29) 
-- CODE:
from numpy import*
from numpy.linalg import*

d= array(eval(input("digite seu vetor")))
a= array([[10,12,15],
			[6,8,12],
			[12,12,18]])
d= dot(inv(a),d.T)

print("cadeira:",round(v[0],0))
print("bau:",round(v[1],0))
print("mesa:",round(v[2],0))
for i in range(d):
	if max(d[i]==d[0]):
		print("cadeira")
	elif (max(d[i]==d[1])):
		print("bau")
	else:
		print("mesa")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:18:40) 
-- CODE:
from numpy import*
from numpy.linalg import*

d= array(eval(input("digite seu vetor")))
a= array([[10,12,15],
			[6,8,12],
			[12,12,18]])
d= dot(inv(a),d.T)

print("cadeira:",round(d[0],0))
print("bau:",round(d[1],0))
print("mesa:",round(d[2],0))
for i in range(d):
	if max(d[i]==d[0]):
		print("cadeira")
	elif (max(d[i]==d[1])):
		print("bau")
	else:
		print("mesa")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:18:40) 
-- CODE:
from numpy import*
from numpy.linalg import*

d= array(eval(input("digite seu vetor")))
a= array([[10,12,15],
			[6,8,12],
			[12,12,18]])
d= dot(inv(a),d.T)

print("cadeira:",round(d[0],0))
print("bau:",round(d[1],0))
print("mesa:",round(d[2],0))
for i in range(d):
	if max(d[i]==d[0]):
		print("cadeira")
	elif (max(d[i]==d[1])):
		print("bau")
	else:
		print("mesa")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 10:18:43) 
-- CODE:
from numpy import*
from numpy.linalg import*

d= array(eval(input("digite seu vetor")))
a= array([[10,12,15],
			[6,8,12],
			[12,12,18]])
d= dot(inv(a),d.T)

print("cadeira:",round(d[0],0))
print("bau:",round(d[1],0))
print("mesa:",round(d[2],0))
for i in range(d):
	if max(d[i]==d[0]):
		print("cadeira")
	elif (max(d[i]==d[1])):
		print("bau")
	else:
		print("mesa")
	
-- EXECUTION TIME:
1.24272
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1863/1290/main.py", line 13, in <module>
    for i in range(d):
TypeError: only integer scalar arrays can be converted to a scalar index

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:19:41) 
-- CODE:
from numpy import*
from numpy.linalg import*

d= array(eval(input("digite seu vetor")))
a= array([[10,12,15],
			[6,8,12],
			[12,12,18]])
d= dot(inv(a),d.T)

print("cadeira:",round(d[0],0))
print("bau:",round(d[1],0))
print("mesa:",round(d[2],0))

	if max(d)==d[0]:
		print("cadeira")
	elif max(d)==d[1]:
		print("bau")
	else:
		print("mesa")
	
-- ERROR:
File "XXXX", line 14
    if max(d)==d[0]:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:19:49) 
-- CODE:
from numpy import*
from numpy.linalg import*

d= array(eval(input("digite seu vetor")))
a= array([[10,12,15],
			[6,8,12],
			[12,12,18]])
d= dot(inv(a),d.T)

print("cadeira:",round(d[0],0))
print("bau:",round(d[1],0))
print("mesa:",round(d[2],0))

if max(d)==d[0]:
		print("cadeira")
elif max(d)==d[1]:
		print("bau")
else:
		print("mesa")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:20:20) 
-- CODE:
from numpy import*
from numpy.linalg import*

d= array(eval(input("digite seu vetor")))
a= array([[10,12,15],
			[6,8,12],
			[12,12,18]])
d= dot(inv(a),d.T)

print("cadeira:",round(d[0],1))
print("bau:",round(d[1],1))
print("mesa:",round(d[2],1))

if max(d)==d[0]:
	print("cadeira")
elif max(d)==d[1]:
	print("bau")
else:
	print("mesa")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:20:40) 
-- CODE:
from numpy import*
from numpy.linalg import*

d= array(eval(input("digite seu vetor")))
a= array([[10,12,15],
			[6,8,12],
			[12,12,18]])
d= dot(inv(a),d.T)

print("cadeira:",round(d[0],3))
print("bau:",round(d[1],3))
print("mesa:",round(d[2],3))

if max(d)==d[0]:
	print("cadeira")
elif max(d)==d[1]:
	print("bau")
else:
	print("mesa")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:21:21) 
-- CODE:
from numpy import*
from numpy.linalg import*

d= array(eval(input("digite seu vetor")))
a= array([[10,12,15],
			[6,8,12],
			[12,12,18]])
d= dot(inv(a),d.T)
print(d)
print("cadeira:",round(d[0],3))
print("bau:",round(d[1],3))
print("mesa:",round(d[2],3))

if max(d)==d[0]:
	print("cadeira")
elif max(d)==d[1]:
	print("bau")
else:
	print("mesa")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:21:52) 
-- CODE:
from numpy import*
from numpy.linalg import*

d= array(eval(input("digite seu vetor")))
a= array([[10,12,15,
			6,8,12,
			12,12,18]])
d= dot(inv(a),d.T)
print(d)
print("cadeira:",round(d[0],3))
print("bau:",round(d[1],3))
print("mesa:",round(d[2],3))

if max(d)==d[0]:
	print("cadeira")
elif max(d)==d[1]:
	print("bau")
else:
	print("mesa")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:22:48) 
-- CODE:
from numpy import*
from numpy.linalg import*

d= array(eval(input("digite seu vetor")))
a= array([[10,12,15],
			[6,8,12],
			[12,12,18]])
d= dot(inv(a),d.T)
print(d)
print("cadeira:",round(d[0],3))
print("bau:",round(d[1],3))
print("mesa:",round(d[2],3))

if max(d)==d[0]:
	print("cadeira")
elif max(d)==d[1]:
	print("bau")
else:
	print("mesa")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:23:00) 
-- CODE:
from numpy import*
from numpy.linalg import*

d= array(eval(input("digite seu vetor")))
a= array([[10,12,15],
			[6,8,12],
			[12,12,18]])
d= dot(inv(d),a.T)
print(d)
print("cadeira:",round(d[0],3))
print("bau:",round(d[1],3))
print("mesa:",round(d[2],3))

if max(d)==d[0]:
	print("cadeira")
elif max(d)==d[1]:
	print("bau")
else:
	print("mesa")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:23:58) 
-- CODE:
from numpy import*
from numpy.linalg import*

d= array(eval(input("digite seu vetor")))
a= array([[10,12,15],
			[6,8,12],
			[12,12,18]])
d= dot(inv(a),d.T)
print(d)
print("cadeira:",round(d[0],0))
print("bau:",round(d[1],0))
print("mesa:",round(d[2],0))

if max(d)==d[0]:
	print("cadeira")
elif max(d)==d[1]:
	print("bau")
else:
	print("mesa")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:26:40) 
-- CODE:
from numpy import*
from numpy.linalg import*

d= array(eval(input("digite seu vetor")))
a= array([[10,12,15],
			[6,8,12],
			[12,12,18]])
d= dot(inv(a),d.T)
print(d)
print("cadeira:",round(d[0],0))
print("bau:",round(d[1],0))
print("mesa:",round(d[2],0))

if max(d)==d[0]:
	print("cadeira")
elif max(d)==d[1]:
	print("bau")
else:
	print("mesa")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:26:45) 
-- CODE:
from numpy import*
from numpy.linalg import*

d= array(eval(input("digite seu vetor")))
a= array([[10,12,15],
			[6,8,12],
			[12,12,18]])
d= dot(inv(a),d.T)
print(d)
print("cadeira:",round(d[0],0))
print("bau:",round(d[1],0))
print("mesa:",round(d[2],0))

if max(d)==d[0]:
	print("cadeira")
elif max(d)==d[1]:
	print("bau")
else:
	print("mesa")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:29:01) 
-- CODE:
from numpy import*
from numpy.linalg import*

k= array(eval(input("digite seu vetor")))
a= array([[10,12,15],
			[6,8,12],
			[12,12,18]])
d= dot(inv(a),d.T)

print("cadeira:",round(d[0],0))
print("bau:",round(d[1],0))
print("mesa:",round(d[2],0))

if max(d)==d[0]:
	print("cadeira")
elif max(d)==d[1]:
	print("bau")
else:
	print("mesa")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:29:17) 
-- CODE:
from numpy import*
from numpy.linalg import*

k= array(eval(input("digite seu vetor")))
a= array([[10,12,15],
			[6,8,12],
			[12,12,18]])
d= dot(inv(a),k.T)

print("cadeira:",round(d[0],0))
print("bau:",round(d[1],0))
print("mesa:",round(d[2],0))

if max(d)==d[0]:
	print("cadeira")
elif max(d)==d[1]:
	print("bau")
else:
	print("mesa")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:30:39) 
-- CODE:
from numpy import*
from numpy.linalg import*

k= array(eval(input("digite seu vetor")))
a= array([[10,12,15],
			[6,8,12],
			[12,12,18]])
d= dot(inv(a),k.T)
print(d)
print("cadeira:",round(d[0],0))
print("bau:",round(d[1],0))
print("mesa:",round(d[2],0))

if max(d)==d[0]:
	print("cadeira")
elif max(d)==d[1]:
	print("bau")
else:
	print("mesa")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:31:28) 
-- CODE:
from numpy import*
from numpy.linalg import*

k= array(eval(input("digite seu vetor")))
a= array([[10,12,15],
			[6,8,12],
			[12,12,18]])
d= dot(inv(a),k.T)
print("cadeira:",round(d[0],0))
print("bau:",round(d[1],0))
print("mesa:",round(d[2],0))

if max(d)==d[0]:
	print("cadeira")
elif max(d)==d[1]:
	print("bau")
else:
	print("mesa")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:32:12) 
-- CODE:
from numpy import*
from numpy.linalg import*

k= array(eval(input("digite seu vetor")))
a= array([[10,12,15],[6,8,12],[12,12,18]])
d= dot(inv(a),k.T)
print("cadeira:",round(d[0],0))
print("bau:",round(d[1],0))
print("mesa:",round(d[2],0))

if max(d)==d[0]:
	print("cadeira")
elif max(d)==d[1]:
	print("bau")
else:
	print("mesa")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:33:34) 
-- CODE:
from numpy import*
from numpy.linalg import*

k= array(eval(input("digite seu vetor")))
a= array([[10,12,15],[6,8,12],[12,12,18]])
d= dot(inv(a),k.T)

print(d)
print("cadeira:",round(d[0],0))
print("bau:",round(d[1],0))
print("mesa:",round(d[2],0))

if max(d)==d[0]:
	print("cadeira")
elif max(d)==d[1]:
	print("bau")
else:
	print("mesa")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:35:16) 
-- CODE:
from numpy import*
from numpy.linalg import*

k= array(eval(input("digite seu vetor")))
k=k*60
a= array([[10,12,15],[6,8,12],[12,12,18]])
d= dot(inv(a),k.T)

print(d)
print("cadeira:",round(d[0],0))
print("bau:",round(d[1],0))
print("mesa:",round(d[2],0))

if max(d)==d[0]:
	print("cadeira")
elif max(d)==d[1]:
	print("bau")
else:
	print("mesa")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 10:35:28) 
-- CODE:
from numpy import*
from numpy.linalg import*

k= array(eval(input("digite seu vetor")))
k=k*60
a= array([[10,12,15],[6,8,12],[12,12,18]])
d= dot(inv(a),k.T)

print(d)
print("cadeira:",round(d[0],0))
print("bau:",round(d[1],0))
print("mesa:",round(d[2],0))

if max(d)==d[0]:
	print("cadeira")
elif max(d)==d[1]:
	print("bau")
else:
	print("mesa")
	
-- EXECUTION TIME:
1.17947
-- TEST CASE 1:
---- input:
[337.95,255.26666667,392.5]
---- correct output:
cadeira: 192.0
bau: 326.0
mesa: 963.0
mesa
---- user output:
[191.9999999  326.         963.00000007]
cadeira: 192.0
bau: 326.0
mesa: 963.0
mesa
-- TEST CASE 2:
---- input:
[697.25,467.33333333,706.1]
---- correct output:
cadeira: 102.0
bau: 3265.0
mesa: 109.0
bau
---- user output:
[ 102.0000001  3265.          108.99999993]
cadeira: 102.0
bau: 3265.0
mesa: 109.0
bau
-- TEST CASE 3:
---- input:
[3179.23333333,2196.4,3770.2]
---- correct output:
cadeira: 9512.0
bau: 1122.0
mesa: 5478.0
cadeira
---- user output:
[9512.         1121.9999999  5478.00000007]
cadeira: 9512.0
bau: 1122.0
mesa: 5478.0
cadeira
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:35:36) 
-- CODE:
from numpy import*
from numpy.linalg import*

k= array(eval(input("digite seu vetor")))
k=k*60
a= array([[10,12,15],[6,8,12],[12,12,18]])
d= dot(inv(a),k.T)

print(d)
print("cadeira:",round(d[0],0))
print("bau:",round(d[1],0))
print("mesa:",round(d[2],0))

if max(d)==d[0]:
	print("cadeira")
elif max(d)==d[1]:
	print("bau")
else:
	print("mesa")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 10:35:55) 
-- CODE:
from numpy import*
from numpy.linalg import*

k= array(eval(input("digite seu vetor")))
k=k*60
a= array([[10,12,15],[6,8,12],[12,12,18]])
d= dot(inv(a),k.T)

print(d)
print("cadeira:",round(d[0],0))
print("bau:",round(d[1],0))
print("mesa:",round(d[2],0))

if max(d)==d[0]:
	print("cadeira")
elif max(d)==d[1]:
	print("bau")
else:
	print("mesa")
	
-- EXECUTION TIME:
1.09438
-- TEST CASE 1:
---- input:
[337.95,255.26666667,392.5]
---- correct output:
cadeira: 192.0
bau: 326.0
mesa: 963.0
mesa
---- user output:
[191.9999999  326.         963.00000007]
cadeira: 192.0
bau: 326.0
mesa: 963.0
mesa
-- TEST CASE 2:
---- input:
[697.25,467.33333333,706.1]
---- correct output:
cadeira: 102.0
bau: 3265.0
mesa: 109.0
bau
---- user output:
[ 102.0000001  3265.          108.99999993]
cadeira: 102.0
bau: 3265.0
mesa: 109.0
bau
-- TEST CASE 3:
---- input:
[3179.23333333,2196.4,3770.2]
---- correct output:
cadeira: 9512.0
bau: 1122.0
mesa: 5478.0
cadeira
---- user output:
[9512.         1121.9999999  5478.00000007]
cadeira: 9512.0
bau: 1122.0
mesa: 5478.0
cadeira
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:36:05) 
-- CODE:
from numpy import*
from numpy.linalg import*

k= array(eval(input("digite seu vetor")))
k=k*60
a= array([[10,12,15],[6,8,12],[12,12,18]])
d= dot(inv(a),k.T)

print(d)
print("cadeira:",round(d[0],0))
print("bau:",round(d[1],0))
print("mesa:",round(d[2],0))

if max(d)==d[0]:
	print("cadeira")
elif max(d)==d[1]:
	print("bau")
else:
	print("mesa")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 10:36:25) 
-- CODE:
from numpy import*
from numpy.linalg import*

k= array(eval(input("digite seu vetor")))
k=k*60
a= array([[10,12,15],[6,8,12],[12,12,18]])
d= dot(inv(a),k.T)

print(d)
print("cadeira:",round(d[0],0))
print("bau:",round(d[1],0))
print("mesa:",round(d[2],0))

if max(d)==d[0]:
	print("cadeira")
elif max(d)==d[1]:
	print("bau")
else:
	print("mesa")
	
-- EXECUTION TIME:
0.891723
-- TEST CASE 1:
---- input:
[337.95,255.26666667,392.5]
---- correct output:
cadeira: 192.0
bau: 326.0
mesa: 963.0
mesa
---- user output:
[191.9999999  326.         963.00000007]
cadeira: 192.0
bau: 326.0
mesa: 963.0
mesa
-- TEST CASE 2:
---- input:
[697.25,467.33333333,706.1]
---- correct output:
cadeira: 102.0
bau: 3265.0
mesa: 109.0
bau
---- user output:
[ 102.0000001  3265.          108.99999993]
cadeira: 102.0
bau: 3265.0
mesa: 109.0
bau
-- TEST CASE 3:
---- input:
[3179.23333333,2196.4,3770.2]
---- correct output:
cadeira: 9512.0
bau: 1122.0
mesa: 5478.0
cadeira
---- user output:
[9512.         1121.9999999  5478.00000007]
cadeira: 9512.0
bau: 1122.0
mesa: 5478.0
cadeira
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:37:11) 
-- CODE:
from numpy import*
from numpy.linalg import*

k= array(eval(input("digite seu vetor")))
k=k*60
a= array([[10,12,15],[6,8,12],[12,12,18]])
d= dot(inv(a),k.T)

print(d)
print("cadeira:",round(d[0],0))
print("bau:",round(d[1],0))
print("mesa:",round(d[2],0))

if max(d)==d[0]:
	print("cadeira")
if max(d)==d[1]:
	print("bau")
if(max(d)==d[2]):
	print("mesa")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 10:37:17) 
-- CODE:
from numpy import*
from numpy.linalg import*

k= array(eval(input("digite seu vetor")))
k=k*60
a= array([[10,12,15],[6,8,12],[12,12,18]])
d= dot(inv(a),k.T)

print(d)
print("cadeira:",round(d[0],0))
print("bau:",round(d[1],0))
print("mesa:",round(d[2],0))

if max(d)==d[0]:
	print("cadeira")
if max(d)==d[1]:
	print("bau")
if(max(d)==d[2]):
	print("mesa")
	
-- EXECUTION TIME:
1.01684
-- TEST CASE 1:
---- input:
[337.95,255.26666667,392.5]
---- correct output:
cadeira: 192.0
bau: 326.0
mesa: 963.0
mesa
---- user output:
[191.9999999  326.         963.00000007]
cadeira: 192.0
bau: 326.0
mesa: 963.0
mesa
-- TEST CASE 2:
---- input:
[697.25,467.33333333,706.1]
---- correct output:
cadeira: 102.0
bau: 3265.0
mesa: 109.0
bau
---- user output:
[ 102.0000001  3265.          108.99999993]
cadeira: 102.0
bau: 3265.0
mesa: 109.0
bau
-- TEST CASE 3:
---- input:
[3179.23333333,2196.4,3770.2]
---- correct output:
cadeira: 9512.0
bau: 1122.0
mesa: 5478.0
cadeira
---- user output:
[9512.         1121.9999999  5478.00000007]
cadeira: 9512.0
bau: 1122.0
mesa: 5478.0
cadeira
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:37:37) 
-- CODE:
from numpy import*
from numpy.linalg import*

k= array(eval(input("digite seu vetor")))
k=k*60
a= array([[10,12,15],[6,8,12],[12,12,18]])
d= dot(inv(a),k.T)

print(d)
print("cadeira:",round(d[0],0))
print("bau:",round(d[1],0))
print("mesa:",round(d[2],0))

if max(d)==d[0]:
	print("cadeira")
if max(d)==d[1]:
	print("bau")
if(max(d)==d[2]):
	print("mesa")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 10:37:48) 
-- CODE:
from numpy import*
from numpy.linalg import*

k= array(eval(input("digite seu vetor")))
k=k*60
a= array([[10,12,15],[6,8,12],[12,12,18]])
d= dot(inv(a),k.T)

print(d)
print("cadeira:",round(d[0],0))
print("bau:",round(d[1],0))
print("mesa:",round(d[2],0))

if max(d)==d[0]:
	print("cadeira")
if max(d)==d[1]:
	print("bau")
if(max(d)==d[2]):
	print("mesa")
	
-- EXECUTION TIME:
1.2755
-- TEST CASE 1:
---- input:
[337.95,255.26666667,392.5]
---- correct output:
cadeira: 192.0
bau: 326.0
mesa: 963.0
mesa
---- user output:
[191.9999999  326.         963.00000007]
cadeira: 192.0
bau: 326.0
mesa: 963.0
mesa
-- TEST CASE 2:
---- input:
[697.25,467.33333333,706.1]
---- correct output:
cadeira: 102.0
bau: 3265.0
mesa: 109.0
bau
---- user output:
[ 102.0000001  3265.          108.99999993]
cadeira: 102.0
bau: 3265.0
mesa: 109.0
bau
-- TEST CASE 3:
---- input:
[3179.23333333,2196.4,3770.2]
---- correct output:
cadeira: 9512.0
bau: 1122.0
mesa: 5478.0
cadeira
---- user output:
[9512.         1121.9999999  5478.00000007]
cadeira: 9512.0
bau: 1122.0
mesa: 5478.0
cadeira
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:38:00) 
-- CODE:
from numpy import*
from numpy.linalg import*

k= array(eval(input("digite seu vetor")))
k=k*60
a= array([[10,12,15],[6,8,12],[12,12,18]])
d= dot(inv(a),k.T)

print(d)
print("cadeira:",round(d[0],0))
print("bau:",round(d[1],0))
print("mesa:",round(d[2],0))

if max(d)==d[0]:
	print("cadeira")
if max(d)==d[1]:
	print("bau")
if(max(d)==d[2]):
	print("mesa")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 10:39:34) 
-- CODE:
from numpy import*
from numpy.linalg import*

k= array(eval(input("digite seu vetor")))
k=k*60
a= array([[10,12,15],[6,8,12],[12,12,18]])
d= dot(inv(a),k.T)


print("cadeira:",round(d[0],0))
print("bau:",round(d[1],0))
print("mesa:",round(d[2],0))

if max(d)==d[0]:
	print("cadeira")
if max(d)==d[1]:
	print("bau")
if(max(d)==d[2]):
	print("mesa")
	
-- EXECUTION TIME:
0.933105
-- TEST CASE 1:
---- input:
[337.95,255.26666667,392.5]
---- correct output:
cadeira: 192.0
bau: 326.0
mesa: 963.0
mesa
---- user output:
cadeira: 192.0
bau: 326.0
mesa: 963.0
mesa
-- TEST CASE 2:
---- input:
[697.25,467.33333333,706.1]
---- correct output:
cadeira: 102.0
bau: 3265.0
mesa: 109.0
bau
---- user output:
cadeira: 102.0
bau: 3265.0
mesa: 109.0
bau
-- TEST CASE 3:
---- input:
[3179.23333333,2196.4,3770.2]
---- correct output:
cadeira: 9512.0
bau: 1122.0
mesa: 5478.0
cadeira
---- user output:
cadeira: 9512.0
bau: 1122.0
mesa: 5478.0
cadeira
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
